--- a/TyhjaProjekti/build.gradle
+++ b/TyhjaProjekti/build.gradle
@@ -1,3 +1,5 @@
+plugins { id 'com.github.johnrengelman.shadow' version '1.2.4' }
+
 apply plugin: 'java'
 apply plugin: 'application'
 
@@ -7,4 +9,16 @@ jar {
     manifest {
         attributes 'Main-Class': 'ohtu.Main'
     }
+}
+
+repositories {
+    jcenter()
+}
+
+
+
+dependencies {
+    compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.6'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+    compile group: 'org.apache.httpcomponents', name: 'fluent-hc', version: '4.5.3'
 }
